<resources>
    <string name="app_name">Absensi Online</string>

    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="login_masuk">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_utama">LOGIN</string>
    <string name="username">Username</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="reset">Reset</string>
    <string name="password">Password</string>
    <string name="politeknik_negeri">POLITEKNIK NEGERI</string>
    <string name="banyuwangi">BANYUWANGI</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_log">RESET</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="title_activity_bottom_navigasi">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="tanggal">Tanggal</string>
    <string name="alpha">ALPHA :</string>
    <string name="ijin_cuti">IJIN / CUTI :</string>
    <string name="tanggal_history">Tanggal</string>
    <string name="jam_masuk_history">Jam Masuk</string>
    <string name="jam_pulang_history">Jam Pulang</string>
    <string name="status_history">Status</string>
    <string name="waktu_kerja_history">Waktu Kerja</string>
    <string name="bulan">Bulan</string>
    <string name="tahun">Tahun</string>


    <string-array name="Month">
        <item>Januari</item>
        <item>Febuari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>


    <string-array name="Years">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
    </string-array>


</resources>