<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/bg_utama"
    tools:context=".ResetPasswordActivity">
    
    <ImageView
        android:id="@+id/img_logopoliwangi_reset"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo_poliwangi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/politeknik_negeri"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/img_logopoliwangi_reset"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/banyuwangi"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/img_logopoliwangi_reset"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_logopoliwangi_reset"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/reset_password"
                android:textColor="#707070"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_resetemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_username_password"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="5dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="105dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/login_masuk"
                android:fontFamily="sans-serif-condensed"
                android:shadowDx="0"
                android:shadowDy="3"
                android:shadowRadius="10"
                android:text="@string/reset_log"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>