<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorUtama"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_selamatdatang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed"
        android:shadowRadius="20"
        android:shadowDx="0"
        android:shadowDy="3"
        android:textColor="@android:color/white"/>

    <ImageView
        android:id="@+id/image_poliwangi"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo_poliwangi"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:text="@string/login_utama"
        android:background="@drawable/login_bg"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:shadowRadius="10"
        android:shadowDx="0"
        android:shadowDy="3"
        android:textColor="@color/colorLogin"
        android:fontFamily="sans-serif-condensed" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:text="@string/sign_up"
        android:background="@drawable/signup_bg"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:shadowRadius="10"
        android:shadowDx="0"
        android:shadowDy="3"
        android:textColor="@color/colorLogin"
        android:fontFamily="sans-serif-condensed"/>

</LinearLayout>