<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_utama"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/selamat_datang"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="10sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SIGN UP"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_login"
        android:shadowRadius="30"
        android:shadowDy="3"
        android:shadowDx="0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login2"
        android:gravity="center"
        android:padding="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/img_logopoliwangi"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_poliwangi"
                android:layout_gravity="center"/>


            <EditText
                android:id="@+id/et_namalengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_username_password"
                android:hint="@string/nama_lengkap"
                android:textSize="15sp"
                android:padding="5dp"
                android:inputType="text"
                android:lines="1"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_username_password"
                android:hint="@string/email"
                android:textSize="15sp"
                android:padding="5dp"
                android:inputType="textEmailAddress"
                android:lines="1"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_username_password"
                android:hint="@string/password"
                android:textSize="15sp"
                android:padding="5dp"
                android:inputType="textPassword"
                android:lines="1"/>

            <EditText
                android:id="@+id/et_passwordulang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_username_password"
                android:hint="Password Ulang"
                android:textSize="15sp"
                android:padding="5dp"
                android:inputType="textPassword"
                android:lines="1"/>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="105dp"
                android:layout_height="40dp"
                android:text="@string/sign_up"
                android:background="@drawable/login_masuk"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:shadowRadius="10"
                android:shadowDx="0"
                android:shadowDy="3"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-condensed" />


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>